# Latte.jl

./: .gitignore  .travis.yml  LICENSE.md  README.md  REQUIRE  _config.yml  index.html
_posts/: 2016-03-18-welcome-to-jekyll.markdown
benchmarks/alexnet/: alexnet.prototxt  latte.jl  mocha.jl  run_caffe.sh
benchmarks/convolution/: caffe.prototxt  latte.jl  run_caffe.sh
benchmarks/micro/: caffe.prototxt  latte.jl
benchmarks/overfeat/: latte.jl  mocha.jl  overfeat.prototxt  run_caffe.sh
benchmarks/vgg/: latte.jl  mocha.jl  run_caffe.sh
docs/: make.jl  mkdocs.yml
docs/src/: index.md  setup.md
examples/char-rnn/: char-rnn.jl
examples/cifar10/: vgg-drop.jl  vgg-dropout.jl  vgg-mini.jl  vgg-no-drop.jl  vgg.jl
examples/imagenet/: alexnet.jl  vgg-batch-dropout.jl  vgg.jl
examples/mnist/: .gitignore  mnist-dropout.jl  mnist-model-parallel.jl  mnist.jl
examples/tiny-imagenet/: alexnet.jl  vgg-mini.jl
latest/: index.html  sitemap.xml
latest/mkdocs/: search_index.json
latest/setup/: index.html
src/: Latte.jl  comm.jl  ensembles.jl  net.jl  neuron.jl  param.jl  types.jl  util.jl
src/optimizers/: array_expr_inline.jl  fusion.jl  gemm_pattern_match.jl  parallelize.jl  tiling.jl  wrap_for_loops.jl
src/stdlib/: DL.jl  neuron.jl  solvers.jl  stdlib.jl
src/transforms/: distribute.jl  fixed_dims.jl  neuron.jl  tree_cleaners.jl  util.jl
test/: fusion.jl  runtests.jl  test_snapshot.jl
test/mpi/: test_simple.jl
test/stdlib/: test_accuracy.jl  test_batch_normalization.jl  test_gru.jl  (+17 more)
tutorials/: index.md
utils/converter/: CMakeLists.txt  convert.cpp
(+51 files in other folders)
